--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ spring.servlet.multipart.max-request-size=75MB
 
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
-file.upload-dir=/uploads
+file.upload-dir=/uploads/
 
